[build-system]
requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
files = ["dicom_utils", "tests"]

[tool.autopep8]
max_line_length = 120
ignore = "E203,E231,E305,E402,E721,E722,E741,F401,F403,F405,F821,F841,F999,W503"
recursive = true
aggressive = 3
files = ["dicom_utils", "tests"]

[tool.black]
line-length = 120
target-version = ['py37']
src = ["dicom_utils", "tests"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = false
src_paths = ["dicom_utils", "tests"]

#[tool.pyright]
#venvPath = "."
#venv = "env"
