[metadata]
name = dicom_utils
version = 0.1.0

[options]
python_requires = >=3.7
packages = find:
# NOTE: Suffix git url with #egg=package_name to avoid multiple installs
install_requires = 
  dicom-anonymizer @ git+https://github.com/medcognetics/dicom-anonymizer.git@v1.0.7-fork
  registry @ git+https://github.com/TidalPaladin/callable-registry.git
  tqdm_multiprocessing @ git+https://github.com/TidalPaladin/tqdm-multiprocessing.git
  colorama
  matplotlib
  pydicom
  Pillow
  numpy
  pylibjpeg
  pylibjpeg-libjpeg
  pylibjpeg-openjpeg
  opencv-python

[options.extras_require]
j2k = 
  pynvjpeg2k @ git+ssh://git@github.com/medcognetics/pynvjpeg2k.git

[pycodestyle]
max-line-length = 120

# Create CLI entry points
[options.entry_points]
console_scripts =
  dicomutils = dicom_utils.cli.__main__:main
  dicomcat = dicom_utils.cli.cat:entrypoint
  dicomfind = dicom_utils.cli.find:entrypoint
  dicom2img = dicom_utils.cli.dicom2img:entrypoint
  dicom_types = dicom_utils.cli.dicom_types:entrypoint
  dicom_overlap = dicom_utils.cli.overlap:entrypoint
  dicomstrip = dicom_utils.cli.strip:entrypoint
  dicomphi = dicom_utils.cli.dicomphi:entrypoint
  dicomcheck = dicom_utils.cli.validate:entrypoint
  dicomorg = dicom_utils.cli.organize:entrypoint
  dicom-decomp = dicom_utils.cli.decompress:entrypoint
